# pymono

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/DISCUSSION_TEMPLATE/: q-and-a.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: configuration.md  getting-started.md  index.md  llm.txt
docs/commands/: README.md  add.md  bootstrap.md  changed.md  clean.md  exec.md  export.md  init.md  list.md  release.md  run.md  version.md
scripts/: bump.sh  test-all-versions.sh
src/pymelos/: __init__.py  compat.py  interactive.py  templates.py
src/pymelos/cli/: app.py
src/pymelos/cli/commands/: init.py
src/pymelos/cli/output/: table.py
src/pymelos/commands/: __init__.py  add.py  base.py  bootstrap.py  changed.py  clean.py  exec.py  export.py  list.py  release.py  run.py  version.py
src/pymelos/execution/: parallel.py  runner.py
src/pymelos/filters/: chain.py  ignore.py  scope.py  since.py
src/pymelos/git/: diff.py  repo.py
src/pymelos/uv/: sync.py
src/pymelos/versioning/: conventional.py
tests/: conftest.py
tests/integration/: test_git.py  test_lifecycle.py  test_release_integration.py  test_uv_publish.py  test_uv_sync.py  test_version_integration.py
tests/unit/: test_interactive.py
tests/unit/cli/: test_app.py
tests/unit/cli/commands/: test_init.py
tests/unit/commands/: test_add.py  test_bootstrap.py  test_changed.py  test_changed_interactive.py  test_clean.py  test_exec.py  test_export.py  test_list.py  test_release.py  test_run.py
tests/unit/config/: test_schema.py
tests/unit/execution/: test_parallel.py  test_runner.py
tests/unit/filters/: test_since.py
tests/unit/git/: test_diff.py  test_repo.py
tests/unit/interactive/: test_interactive.py
