[project]
name = "pymelos"
version = "0.1.2"
description = "Python monorepo manager"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
keywords = ["monorepo", "workspace", "uv", "python", "env","management"]
authors = [{ name = "Ye Lin Aung" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "typer>=0.15.0",
    "rich>=13.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/y3l1n4ung/pymelos"
Repository = "https://github.com/y3l1n4ung/pymelos"
Issues = "https://github.com/y3l1n4ung/pymelos/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "commitizen>=4.0.0",
    "pre-commit>=4.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
pymelos = "pymelos.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pymelos"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = []

[tool.ty.environment]
python-version = "3.10"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.2"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
    "src/pymelos/__init__.py:__version__",
]
update_changelog_on_bump = false
